--- a/todo.txt
+++ b/todo.txt
@@ -11,6 +11,8 @@ does it restore from a zip and naming the internal file? yes
 document:
 only works on the same machine as SQL Server
 how to do log backups
+which compression should I use?  How do they compare?
+
 
 
 roadmap:
@@ -20,3 +22,4 @@ when overwriting a file, don't destroy/recreate, but overwrite in place to prese
 striped backups
 threading: request the next block from SQL Server while another thread is compressing
 remove the SQL injection attack
+encryption plugin
