--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,8 @@ restore on top of an existing database? no error message
 rate doesn't print out its config
 package version number does not match assembly's version number.
 cntl-c kills the app, but we can handle the event: http://www.codeneverwritten.com/2006/10/ctrl-c-and-net-console-application.html
+Do escaped cmd line args work?
+are params case sensitive?
 
 
 does it work w/ SQL express?
@@ -19,42 +21,43 @@ which compression should I use?  How do they compare?
 
 
 roadmap:
-connect to a SQL Server named instance
 gui
 when overwriting a file, don't destroy/recreate, but overwrite in place to preserve a defraged file.
 striped backups
 threading: request the next block from SQL Server while another thread is compressing
-remove the SQL injection attack
 encryption plugin
 
 
 db plugin changes:
 backup options:
-DatabaseName=
+Database=
 BackupType=Full|Differential|Log
-READ_WRITE_FILEGROUPS=Yes
+READ_WRITE_FILEGROUPS
 File=
 FileGroup=
-COPY_ONLY=Yes
-Checksum=Yes|No
-STOP_ON_Checksum_ERROR=Yes|No
+COPY_ONLY
+CHECKSUM|NO_CHECKSUM
+STOP_ON_ERROR|CONTINUE_AFTER_ERROR
 
 restore options:
-Checksum=Yes|No
-STOP_ON_Checksum_ERROR=Yes|No
-KEEP_REPLICATION=Yes
-MOVE=log=file,MOVE=log=file,n
-ENABLE_BROKER=Yes
-ERROR_BROKER_CONVERSATIONS=Yes
-NEW_BROKER=Yes
-recovery=Yes
-norecovery=Yes
+restoretype=Database|Log
+CHECKSUM|NO_CHECKSUM
+STOP_ON_ERROR|CONTINUE_AFTER_ERROR
+KEEP_REPLICATION
+MOVE='logicalname'TO'file'
+ENABLE_BROKER
+ERROR_BROKER_CONVERSATIONS
+NEW_BROKER
+recovery
+norecovery
 standby=
-?REPLACE=Yes
-RESTRICTED_USER=Yes
-?stopat,etc
-partial=Yes
+REPLACE
+RESTART
+RESTRICTED_USER
+STOPAT=
+partial
 READ_WRITE_FILEGROUPS=Yes
 File=
 FileGroup=
-Page=
+?Page=
+LOADHISTORY
