--- a/todo.txt
+++ b/todo.txt
@@ -3,7 +3,7 @@ restore on top of an existing database? no error message
 package version number does not match assembly's version number.
 cntl-c kills the app, but we can handle the event: http://www.codeneverwritten.com/2006/10/ctrl-c-and-net-console-application.html
 Do escaped cmd line args work?
-
+error on overwrite? 
 
 does it work w/ SQL express? yes, but I have sql installed too.
 
